AC_PREREQ(2.53)
AC_INIT(aclocal.m4)
AC_CANONICAL_SYSTEM

AM_OPTIONS_WXCONFIG
AC_PROG_CXX
AC_PROG_CXXCPP
AC_LANG_CPLUSPLUS
AC_PROG_INSTALL

AC_ARG_ENABLE(debug,
              [  --enable-debug          Enable debugging information],
              USE_DEBUG="$enableval", USE_DEBUG="no")

if test $USE_DEBUG = yes ; then 
  DEBUG=1
  FINAL=0
  dnl Bakefile doesn't touch {C,CPP,CXX,LD}FLAGS in autoconf format, we
  dnl have to do it ourselves. (Incorrectly) assuming GCC here:
  CFLAGS="$CFLAGS -g"
else
  DEBUG=0
  FINAL=1
fi

# Check for wxWindows
AM_PATH_WXCONFIG([2.4.0], [], [
        AC_MSG_ERROR([
     	   wxWindows must be installed on your system
     	   but wx-config script couldn't be found.
     
     	   Please check that wx-config is in path, the directory
     	   where wxWindows libraries are installed (returned by
     	   'wx-config --libs' command) is in LD_LIBRARY_PATH or
     	   equivalent variable and wxWindows version is 2.4.0 or above.
        ])], [stc,std])
        
CPPFLAGS="$CPPFLAGS $WX_CXXFLAGS"
LDFLAGS="$LDFLAGS $WX_LDFLAGS $WX_LIBS"

AC_BAKEFILE
AC_OUTPUT([Makefile])
